[tool.poetry]
name = "tecolicom-gpty"
version = "0.2.4"
description = "OpenAI GPT API Command Line Wrapper"
authors = ["Kazumasa Utashiro <kaz@utashiro.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gpty"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.12.0"
click = "^7.1.2"
click-spinner = "^0.1.10"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gpty = "gpty.gpty:app"
